// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review component should handle delete review event 1`] = `
<li
  className="collection-item avatar"
>
  <div>
    <img
      alt=""
      className="circle"
      src="User image url"
    />
    <span
      className="name"
    >
      <b>
        John Cane
      </b>
    </span>
    <p
      className="created-on"
    >
      Invalid Date
      <i
        className="material-icons delete-review right"
        data-tip="Delete"
        id="delete-review"
        onClick={[Function]}
        role="button"
        tabIndex="0"
      >
        delete
      </i>
    </p>
    <p
      className="review-content"
    >
      Wonderful recipe idea
    </p>
    <ReactTooltip
      insecure={true}
      resizeHide={true}
      wrapper="div"
    />
  </div>
</li>
`;

exports[`Review component should render component 1`] = `
<li
  className="collection-item avatar"
>
  <div>
    <img
      alt=""
      className="circle"
      src="User image url"
    />
    <span
      className="name"
    >
      <b>
        John Cane
      </b>
    </span>
    <p
      className="created-on"
    >
      Invalid Date
    </p>
    <p
      className="review-content"
    >
      Wonderful recipe idea
    </p>
    <ReactTooltip
      insecure={true}
      resizeHide={true}
      wrapper="div"
    />
  </div>
</li>
`;
